re PR debug/43942 (-fcompare-debug faulure with external declaration in function.)

PR debug/43942
	* tree.c (auto_var_in_fn_p): Return false for DECL_EXTERNAL vars.

	* c-c++-common/pr43942.c: New test.

From-SVN: r158932